syntax = "proto3";

package shurli;
option go_package = "shurlipb";

message WalletInfoRequest {}

message WalletInfo {
    string Name = 1;
    string Ticker = 2;
    string Icon = 3;
    string Status = 4;
    double Balance = 5;
    double ZBalance = 6;
    int32 Blocks = 7;
    bool Synced = 8;
    bool Shielded = 9;
    bool TValidAddr = 10;
    bool ZValidAddr = 11;
}

message WalletInfoResponse{
    repeated WalletInfo Wallets = 1;
}

service ShurliService{
    // Return details of wallets which are supported by this Shurli
    rpc WalletInfo(WalletInfoRequest) returns (WalletInfoResponse) {};
}